# agent-eval

./: .env.example  .gitignore  README.md  pyproject.toml
agent_eval/: __init__.py  __main__.py  async_pipeline.py  cache.py  config.py  config_schema.py  distributed.py  llm_client.py  reporting.py  runner.py  streaming.py  tracking.py  utils.py
agent_eval/agents/: __init__.py  factory.py  protocol.py  providers.py
agent_eval/cli/: __init__.py  main.py
agent_eval/datasets/: __init__.py  builder.py  store.py
agent_eval/evaluators/: __init__.py  base.py  custom_eval_plugin.py
agent_eval/judges/: __init__.py  base.py  factory.py  llm_judge.py  panel.py
agent_eval/orchestrator/: __init__.py  agent.py  hooks.py  orchestrator.py  result_store.py  task_queue.py
agent_eval/plugins/: __init__.py  base.py  custom_eval_plugin.py
agent_eval/prompts/: __init__.py  store.py
agent_eval/reviews/: __init__.py  store.py
agent_eval/sandbox/: __init__.py  factory.py  tools.py
agent_eval/scorers/: __init__.py  agent.py  base.py  code_quality.py  deterministic.py  ensemble.py  factory.py  faithfulness.py  format_validation.py  g_eval.py  metrics.py  relevancy.py  safety.py  similarity.py  text_analysis.py
agent_eval/stats/: __init__.py  bootstrap.py
agent_eval/trace/: __init__.py  analyzer.py  collector.py  normalizers.py  replay.py  schema.py  store.py  task_generator.py  viewer.py
agent_eval/web/: __init__.py  app.py  eval_model.py  events.py  langfuse.py  metadata.py  (+3 more)
docs/: technical_design.html  technical_design.md  third_party_agent_evaluation.html  third_party_agent_evaluation.md
tests/: conftest.py
web/: index.html  package-lock.json  package.json  vite.config.ts
(+115 files in other folders)
