[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-eval"
version = "0.1.0"
description = "A pluggable evaluation framework for AI agents"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "AgentEval Contributors" },
]
requires-python = ">=3.9"
keywords = ["ai", "agent", "evaluation", "benchmark", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
all = [
    "openai>=1.0",
    "datasets>=2.0",
    "docker>=6.0",
]
benchmark = [
    "datasets>=2.0",
]
judge = [
    "openai>=1.0",
]
sandbox = [
    "docker>=6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/agent-eval/agent-eval"
Source = "https://github.com/agent-eval/agent-eval"
Documentation = "https://agent-eval.readthedocs.io"

[project.scripts]
agent-eval = "agent_eval.cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["agent_eval", "agent_eval.*"]